--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,11 @@
 <!--            <artifactId>jersey-test-framework-core</artifactId>-->
 <!--            <version>2.31</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.testng</groupId>-->
-<!--            <artifactId>testng</artifactId>-->
-<!--            <version>6.9.8</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.8</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.glassfish.jersey.test-framework.providers</groupId>-->
 <!--            <artifactId>jersey-test-framework-provider-jetty</artifactId>-->
